[package]
name = "resource-fs"
build = "build.rs"
version = "0.1.0"
authors = ["Lou, Ting <ting.lou@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rbranson/rust-mmap"
homepage = "https://github.com/rbranson/rust-mmap"
description = """
A library for dealing with memory-mapped I/O
"""

[dependencies]

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }
