[package]
name = "erfs-example"
build = "build.rs"
version = "0.1.0"
authors = ["Lou, Ting <ting.lou@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tinglou/resource-fs"
homepage = "https://github.com/tinglou/resource-fs"

description = "Embedded resource file system (C/Rust): example."

[dependencies]
erfs-rt = { path = "../erfs-rt" }

[build-dependencies]
erfs-gen = { path = "../erfs-gen" }
cc = { version = "1.0.50", features = ["parallel"] }

[dev-dependencies]
