[package]
name = "erfs-gen"
build = "build.rs"
version = "0.1.0"
authors = ["Lou, Ting <ting.lou@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tinglou/resource-fs"
homepage = "https://github.com/tinglou/resource-fs"

description = "Embedded resource file system(C/Rust): tool generate C/Rust source files from a resource directory."

[dependencies]
deflate = "0.8.2"

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }
bindgen = "0.49.4"


[dev-dependencies]
