[package]
name = "rfs-example"
build = "build.rs"
version = "0.1.0"
authors = ["Lou, Ting <ting.lou@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tinglou/resource-fs"
homepage = "https://github.com/tinglou/resource-fs"

description = "Embedded resource file system: example."

[dependencies]
resource-fs = { path = "../resource_fs" }

[build-dependencies]
rfs_gen = { path = "../rfs_gen" }
cc = { version = "1.0.50", features = ["parallel"] }

[dev-dependencies]
