[package]
name = "rfs_gen"
build = "build.rs"
version = "0.1.0"
authors = ["Lou, Ting <ting.lou@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tinglou/resource-fs"
homepage = "https://github.com/tinglou/resource-fs"

description = """
A library/tool to embed all resource files needed into application.
"""

[dependencies]

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }
bindgen = "0.49.4"
deflate = "0.8.2"
